# SqueakyClean

./: LICENSE  ML_CPP_Functions.py  README.md  SqueakyFields.py  SqueakySqueaky.py  SqueakyText.py  SqueakyTime.py  museum_setup.py  pyproject.toml  setup.py  tidydata.py
SqueakyClean/: SqueakySqueaky.py  squeakyanalytics.py  squeakyessentials.py  squeakymlprep.py  squeakyscience.py  squeakytext.py  squeakytime.py
docs/: examples.md
src/: __init__.py  squeakyessentials.py  squeakyscience.py  squeakytext.py
src/squeakyclean/: __init__.py  squeakyessentials.py  squeakyscience.py  squeakytext.py  squeakytime.py
src/squeakyclean.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
testing/: TestData_download.py  conftest.py  test_squeakyessentials.py  test_squeakyscience.py  test_squeakytext.py  test_squeakytime.py
testinig/: TestData_download.py
